.metadata/.plugins/org.eclipse.cdt.ui/finalproject_is_real.build.log
09:49:58 **** Incremental Build of configuration Debug for project finalproject_is_real ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DDEBUG -DSTM32F429xx -c -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Core/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:174:29: warning: format '%d' expects argument of type 'int', but argument 3 has type 'uint32_t {aka long unsigned int}' [-Wformat=]
    sprintf(msg, "Raw ADC : %d", raw_adc);
                            ~^
                            %ld
../Core/Src/main.c:225:13: error: invalid storage class for function 'MX_ADC1_Init'
 static void MX_ADC1_Init(void)
             ^~~~~~~~~~~~
../Core/Src/main.c:275:13: error: invalid storage class for function 'MX_I2C1_Init'
 static void MX_I2C1_Init(void)
             ^~~~~~~~~~~~
../Core/Src/main.c:321:13: error: invalid storage class for function 'MX_GPIO_Init'
 static void MX_GPIO_Init(void)
             ^~~~~~~~~~~~
../Core/Src/main.c:344:1: error: expected declaration or statement at end of input
 }
 ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:56:13: warning: 'MX_GPIO_Init' used but never defined
 static void MX_GPIO_Init(void);
             ^~~~~~~~~~~~
../Core/Src/main.c:57:13: warning: 'MX_ADC1_Init' used but never defined
 static void MX_ADC1_Init(void);
             ^~~~~~~~~~~~
../Core/Src/main.c:58:13: warning: 'MX_I2C1_Init' used but never defined
 static void MX_I2C1_Init(void);
             ^~~~~~~~~~~~
../Core/Src/main.c:338:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
 void Error_Handler(void)
      ^~~~~~~~~~~~~
../Core/Src/main.c:321:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
 static void MX_GPIO_Init(void)
             ^~~~~~~~~~~~
../Core/Src/main.c:275:13: warning: 'MX_I2C1_Init' defined but not used [-Wunused-function]
 static void MX_I2C1_Init(void)
             ^~~~~~~~~~~~
../Core/Src/main.c:225:13: warning: 'MX_ADC1_Init' defined but not used [-Wunused-function]
 static void MX_ADC1_Init(void)
             ^~~~~~~~~~~~
../Core/Src/main.c:186:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
 void SystemClock_Config(void)
      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:38: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

09:50:00 Build Failed. 5 errors, 9 warnings. (took 1s.92ms)

